[gd_scene load_steps=8 format=3 uid="uid://18qmq1c5pdqa"]

[ext_resource type="Script" path="res://script/cards/red/lf.gd" id="1_ao7ke"]
[ext_resource type="PackedScene" uid="uid://tahtsvfotixd" path="res://scenes/component/health_component.tscn" id="2_pvto4"]
[ext_resource type="PackedScene" uid="uid://4gn77audskrs" path="res://scenes/component/attack_component.tscn" id="3_eefat"]
[ext_resource type="PackedScene" uid="uid://bx028wy2lu25i" path="res://scenes/component/outfit_component.tscn" id="4_s2odf"]
[ext_resource type="Texture2D" uid="uid://d0adsv78bhe3u" path="res://img/piece/standerd/red.png" id="5_3murh"]
[ext_resource type="PackedScene" uid="uid://c83kbyxqmarvi" path="res://scenes/component/score_component.tscn" id="5_6t4r7"]
[ext_resource type="PackedScene" uid="uid://d2lqpgvgq4oh3" path="res://scenes/component/buff_component.tscn" id="6_ssxeb"]

[node name="RedLF" type="Node2D" node_paths=PackedStringArray("health_component", "attack_component", "outfit_component", "score_component", "buff_component")]
script = ExtResource("1_ao7ke")
health_component = NodePath("HealthComponent")
attack_component = NodePath("AttackComponent")
outfit_component = NodePath("OutfitComponent")
score_component = NodePath("ScoreComponent")
buff_component = NodePath("BuffComponent")

[node name="HealthComponent" parent="." instance=ExtResource("2_pvto4")]
unique_name_in_owner = true
DEAFULT_MAX_HEALTH = 5

[node name="AttackComponent" parent="." instance=ExtResource("3_eefat")]
unique_name_in_owner = true
DEFAULT_ATK = 2

[node name="OutfitComponent" parent="." instance=ExtResource("4_s2odf")]
unique_name_in_owner = true
icon_texture = ExtResource("5_3murh")
frame = 6

[node name="ScoreComponent" parent="." instance=ExtResource("5_6t4r7")]
unique_name_in_owner = true

[node name="BuffComponent" parent="." instance=ExtResource("6_ssxeb")]
unique_name_in_owner = true

[connection signal="on_hit" from="AttackComponent" to="." method="_on_attack_component_on_hit"]
